Fixed flex gap

--- a/resources/style.css
+++ b/resources/style.css
@@ -894,8 +894,8 @@ ol li:last-child {padding-bottom: 0px}
 /* flex */
 
 .flex {
-    display: flex; gap:
-    var(--theme-element-spacing);
+    display: flex; 
+    column-gap: var(--theme-element-spacing);
 }
 
 .flex-wrap {
